# urs-2026

./: README.md
lab-01/: lab-01.md
lab-02/app/: Makefile
lab-02/app-cmake-dynamic/: CMakeLists.txt  app.c
lab-02/app-cmake-static/: CMakeLists.txt
lab-02/app/lib/: Makefile
lab-02/sqlite-cmake/: CMakeLists.txt  run.sh
lab-02/sqlite-test/: CMakeLists.txt
lab-02/sqlite-test-cmake/: CMakeLists.txt
lab-02/toolchains/: arm_cortex_a9.cmake
